# todoist-mcp

./: .coverage  README.md  pyproject.toml  pytest.ini  run_tests.py  todoist.py
tests/: README.md  __init__.py  conftest.py  test_mcp_server.py  test_todoist_client.py
